somthing changed after v1.00

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, World! Change This</h1>
+    <h1>Hello, World! This is a change after Version 1.00 commit</h1>
 </body>
 </html>
